# ByteCat

./: .gitignore  .gitmodules  ByteCat.sln  CMakeLists.txt  CMakeSettings.json  README.md  dependencies.lua  dependencyList.lua  premake5.lua
App/: CMakeLists.txt  premake5.lua
App/assets/: CloudVertex.glsl  FboFragment.glsl  FboVertex.glsl  GrassGeometry.glsl  RayMarchFragment.glsl  RayMarchVertex.glsl  SimpleFragment.glsl  SimpleVertex.glsl  StandardFragment.glsl  StandardVertex.glsl
App/assets/skybox/: SkyboxVertex.glsl
App/src/: GraphicsTest.h  LightingTest.h  SandboxApp.cpp  Spectator.h  VisualisatieTechnieken.h
ByteCat/: ByteCat.vcxproj  ByteCat.vcxproj.filters  CMakeLists.txt  premake5.lua
ByteCat/src/: ByteCat.h  Test.cpp  Test.h  bcpch.cpp  bcpch.h
ByteCat/src/ByteCat/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  stb_image.cpp
ByteCat/src/ByteCat/app/: Application.cpp  Application.h  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
ByteCat/src/ByteCat/entity-system/: GameLayer.cpp  GameLayer.h  GameObject.cpp  GameObject.h  GameObjectLayer.cpp  GameObjectLayer.h  Material.cpp  Mesh.cpp  Mesh.h  ModelStorage.cpp
ByteCat/src/ByteCat/entity-system/cameras/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
ByteCat/src/ByteCat/entity-system/renderers/: Mesh.cpp  Mesh.h
ByteCat/src/ByteCat/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
ByteCat/src/ByteCat/game-object/: GameObject.cpp  GameObject.h  GameObjectLayer.cpp  GameObjectLayer.h
ByteCat/src/ByteCat/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRenderer.cpp
ByteCat/src/ByteCat/input/: DefaultInput.cpp  Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
ByteCat/src/ByteCat/input/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
ByteCat/src/ByteCat/platform/: Input.cpp  Window.cpp  Window.h
ByteCat/src/ByteCat/platform/windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
ByteCat/src/ByteCat/render/: Loader.cpp  Loader.h  Model.h  RenderAPI.cpp  RenderAPI.h  RenderSettings.h  Renderer.cpp  Renderer.h
ByteCat/src/ByteCat/render/models/: Mesh.cpp  Mesh.h  Model.h  Texture.cpp  Texture.h
ByteCat/src/ByteCat/render/renderers/: MeshRenderer.cpp  MeshRenderer.h  (+2 more)
ByteCat/src/ByteCat/utils/: Math.cpp  Math.h  Maths.cpp  Maths.h  ModelLoader.cpp  ModelLoader.h  stb_image.cpp
ByteCat/src/byteCat/: Core.h  EntryPoint.h  Log.cpp  Log.h  Platform.h
ByteCat/src/byteCat/app/: Application.cpp  Application.h  Layer.h  LayerStack.cpp  LayerStack.h  Time.h  Window.cpp  Window.h
ByteCat/src/byteCat/ecs/: Behaviour.h  Component.h  ComponentArray.h  ComponentManager.h  EcsCoordinator.h  Entity.h  EntityManager.cpp  EntityManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  System.h  SystemManager.h
ByteCat/src/byteCat/entity/: Behaviour.h  Entity.cpp  Entity.h
ByteCat/src/byteCat/entity-system/: GameLayer.cpp  GameLayer.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  ModelStorage.h
ByteCat/src/byteCat/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Window.cpp  Window.h
ByteCat/src/byteCat/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
ByteCat/src/byteCat/input/: Gamepad.h  Input.h
ByteCat/src/byteCat/inputs/: EventCallback.h  Gamepad.h  Input.cpp  Input.h  KeyCodes.h  MouseCodes.h  PcInputModule.h
ByteCat/src/byteCat/lua/: LuaAPI.cpp  LuaAPI.h  LuaComponent.cpp  LuaComponent.h  LuaFunction.cpp  LuaFunction.h  LuaHelper.cpp  LuaHelper.h  LuaInterface.cpp  LuaInterface.h  LuaScript.cpp  LuaScript.h
ByteCat/src/byteCat/render/: RenderAPI.cpp  RenderAPI.h  RenderSettings.h  Renderer.cpp  Renderer.h
ByteCat/src/byteCat/utils/: CommandExecutor.cpp  CommandExecutor.h  FileIO.cpp  FileIO.h  Macro.h  Math.cpp  Math.h  ModelLoader.cpp  ModelLoader.h  Storage.cpp  Storage.h  ThreadSafeQueue.h  Time.h  Utility.h
ByteCat/src/platform/: CommandExecutor.cpp  CommandExecutor.h  PlatformAPI.cpp  PlatformAPI.h
ByteCat/src/platform/android/: AndroidFileIO.cpp  AndroidImGuiRenderer.cpp  AndroidImGuiRenderer.h  AndroidTime.cpp  AndroidUtility.cpp  AndroidWindow.cpp  AndroidWindow.h
ByteCat/src/platform/mobile/: MobileInputModule.h  MobileRendererAPI.cpp  MobileRendererAPI.h  MobileTime.cpp  MobileWindow.cpp  MobileWindow.h
ByteCat/src/platform/openGL/: Helper  Helper.h  OpenGLArrayBuffer.cpp  OpenGLArrayBuffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLComputeShader.cpp  OpenGLComputeShader.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLImGuiRenderer.cpp  OpenGLImGuiRenderer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture3D.cpp  OpenGLTexture3D.h  OpenGLTextureCube.cpp  OpenGLTextureCube.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
ByteCat/src/platform/winLin/: Time.cpp  WinLinFileIO.cpp  WinLinInput.cpp  WinLinPcInputModule.cpp  WinLinPcInputModule.h  WinLinTime.cpp  WinLinWindow.cpp  WinLinWindow.h
ByteCat/src/platform/windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  premake5.lua
Sandbox/assets/: CloudFragment.glsl  CloudNoiseCompute.glsl  GrassFragment.glsl  GrassGeometry.glsl  GrassVertex.glsl  QuadFragment.glsl  QuadVertex.glsl  RayMarchFragment.glsl  RayMarchVertex.glsl  StandardFragment.glsl  StandardVertex.glsl  TerrainFragment.glsl  TerrainVertex.glsl  TestCompute.glsl  VolumetricRayMarchFragment.glsl  VolumetricRayMarchVertex.glsl
Sandbox/assets/skybox/: SkyboxVertex.glsl
Sandbox/lua/: LuaTestScript.lua
Sandbox/res/: LuaTestScript.lua
Sandbox/res/scripts/: CameraControls.lua
Sandbox/src/: Application.cpp  CameraBehaviour.h  CameraControls.h  GraphicsTest.h  SandboxApp.cpp  TestLayer.h  VisualisatieTechnieken.h
(+141 files in other folders)
